courses/430_programming-languages/assignment-6/tests/error/hw5_error09.nex
fun f() : int
{
   return 1 + true;
}
print "should not get here:n";
1 / 0;
   print f();
